api - refactor: only one ednpoint to get details from appointment
